# osmnavi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: left_traffic_countries.cfg  routing.cfg
src/algos/: astar.h  cluster_dijkstra.h  compact_dijkstra.h  compact_edge_dijkstra.h  complex_turn_restriction.h  components.h  destination_edges.h  dijkstra.h  edge_key.h  edge_router.h  edge_router2.h  edge_router3.h  edge_routing_label.h  edge_routing_label3.h  louvain.h  louvain_precluster.h  merge_tiny_clusters.h  mm_cluster_router.h  mm_edge_dijkstra.h  mm_hybrid_router.h  mm_router_defs.h  restricted_access_edges.h  restricted_edges.h  router.h  routing_defs.h  routing_metric.h  tarjan.h
src/base/: argli.h  constants.h  country_code.h  deduper_with_ids.h  deg_coord.h  encode_coords.h  frequency_table.h  huge_bitset.h  lru_cache.h  mmap_base.h  simple_mem_pool.h  small_vector.h  thread_pool.h  top_n.h  util.h  varbyte.h
src/geometry/: closest_edge.h  closest_node.h  distance.h  distance_from_segment.h  distance_to_segment.h  fast_country_polygons.h  geometry.h  line_clipping.h  polygon.h  tiled_country_lookup.h  tiles.h
src/graph/: access.h  build_clusters.h  build_graph.cpp  build_graph.h  compact_graph.h  crossing.h  data_block.h  graph_def.h  graph_def_utils.h  graph_serialize.h  maxspeed.h  mmgraph.h  mmgraph_build.h  mmgraph_def.h  node_attributes.h  node_barriers.h  node_tags.h  oneway.h  rgraph.h  routing_attrs.h  routing_config.h  store_louvain_clusters.h  surface.h  turn_costs.h
src/html/: favicon.odg  leaflet.html  leaflet2.html  start_icon.odg  target_icon.odg
src/logging/: README.md  loguru.cpp
src/osm/: access.h  admin_boundary.h  id_chain.h  key_bits.h  maxspeed.h  oneway.h  osm_helpers.h  parsed_tag.h  poi.h  read_osm_pbf.h  surface.h  turn_restriction.h  turn_restriction_defs.h
src/osm-util/: admin_boundary.h  key_bits.h  read_osm_pbf.h
src/test/: equal_checks.h  test.cpp  test_base.cpp  test_consume_way.cpp  test_geometry.cpp  test_louvain.cpp  test_mmap.cpp  test_osm_data.cpp  test_routing.cpp  test_serialize.cpp  test_utils.h
